--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,9 +9,10 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  color: #4C4C4C;
+  font-family: 'Lato', georgia, serif;
   font-weight: normal;
+  font-size: 16px;
   word-wrap: break-word;
   font-kerning: normal;
   -moz-font-feature-settings: "kern", "liga", "clig", "calt";
@@ -594,4 +595,8 @@ pre tt:after {
   html {
     font-size: 100%;
   }
+}
+.active {
+  text-decoration: underline #F5B4A2;
+  text-decoration-thickness: 2px;
 }
