--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -11,7 +11,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: #4C4C4C;
   font-family: 'Lato', georgia, serif;
-  font-weight: normal;
+  font-weight: 300;
   font-size: 16px;
   word-wrap: break-word;
   font-kerning: normal;
